--- a/OrganWeb/OrganWeb/bin/OrganWeb.dll.config
+++ b/OrganWeb/OrganWeb/bin/OrganWeb.dll.config
@@ -4,16 +4,28 @@
    https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+
+  <!--DEIXAR O CONFIGSECTIONS EM PRIMEIRO LUGAR DEPOIS DO CONFIGURATION-->
+  
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+
+
+  <connectionStrings>
+    <add name ="BancoContext" connectionString="Server=localhost;Database=dbOrganWeb;Uid=root;Password=h928B!hijdUS;"
+         providerName="MySql.Data.MySqlClient"/>
+  </connectionStrings>
+  
+  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
@@ -57,13 +69,10 @@
     </compilers>
   </system.codedom>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="mssqllocaldb" />
-      </parameters>
-    </defaultConnectionFactory>
+    <defaultConnectionFactory type="MySql.Data.Entity.MySqlConnectionFactory, MySql.Data.Entity.EF6"/>
     <providers>
       <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6" />
+      <!--<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.MySqlServer"/>-->
     </providers>
-  </entityFramework>
-<connectionStrings><add name="dborganwebEntities" connectionString="metadata=res://*/Banco.csdl|res://*/Banco.ssdl|res://*/Banco.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;password=h928B!hijdUS;persistsecurityinfo=True;database=dborganweb&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+  </entityFramework><!--System.Data.EntityClient-->
+</configuration>
