Classes da Raquel

--- a/OrganWeb/OrganWeb/OrganWeb.csproj
+++ b/OrganWeb/OrganWeb/OrganWeb.csproj
@@ -186,19 +186,32 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Areas\Sistema\Controllers\HistoricoEstoque.cs" />
     <Compile Include="Areas\Sistema\Controllers\SementeController.cs" />
     <Compile Include="Areas\Sistema\Models\Cargo.cs" />
     <Compile Include="Areas\Sistema\Models\Categoria.cs" />
+    <Compile Include="Areas\Sistema\Models\Eventos.cs" />
+    <Compile Include="Areas\Sistema\Models\Localizacao.cs" />
+    <Compile Include="Areas\Sistema\Models\Colheita.cs" />
     <Compile Include="Areas\Sistema\Models\Compra.cs" />
     <Compile Include="Areas\Sistema\Models\Controle.cs" />
+    <Compile Include="Areas\Sistema\Models\Cultura.cs" />
+    <Compile Include="Areas\Sistema\Models\Despesa.cs" />
     <Compile Include="Areas\Sistema\Models\Doenca.cs" />
     <Compile Include="Areas\Sistema\Models\Equipe.cs" />
     <Compile Include="Areas\Sistema\Models\Especificacao.cs" />
     <Compile Include="Areas\Sistema\Models\Estadio.cs" />
+    <Compile Include="Areas\Sistema\Models\Estoque.cs" />
     <Compile Include="Areas\Sistema\Models\Fazenda.cs" />
     <Compile Include="Areas\Sistema\Models\Fornecedor.cs" />
     <Compile Include="Areas\Sistema\Models\Funcionario.cs" />
+    <Compile Include="Areas\Sistema\Models\Item.cs" />
+    <Compile Include="Areas\Sistema\Models\Manutencao.cs" />
+    <Compile Include="Areas\Sistema\Models\Monitoramento.cs" />
+    <Compile Include="Areas\Sistema\Models\Máquina.cs" />
     <Compile Include="Areas\Sistema\Models\Plantio.cs" />
+    <Compile Include="Areas\Sistema\Models\Solo.cs" />
+    <Compile Include="Areas\Sistema\Models\Área.cs" />
     <Compile Include="Models\Pagamento.cs" />
     <Compile Include="Areas\Sistema\Models\Praga.cs" />
     <Compile Include="Areas\Sistema\Models\Semente.cs" />
