--- a/OrganWeb/OrganWeb/OrganWeb.csproj
+++ b/OrganWeb/OrganWeb/OrganWeb.csproj
@@ -139,6 +139,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Sistema\Controllers\SementeController.cs" />
+    <Compile Include="Areas\Sistema\Controllers\UsuarioController.cs" />
     <Compile Include="Areas\Sistema\Models\Cargo.cs" />
     <Compile Include="Areas\Sistema\Models\Categoria.cs" />
     <Compile Include="Areas\Sistema\Models\Compra.cs" />
@@ -152,6 +153,7 @@
     <Compile Include="Areas\Sistema\Models\Funcionario.cs" />
     <Compile Include="Areas\Sistema\Models\Plantio.cs" />
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Criptografia.cs" />
     <Compile Include="Models\Pagamento.cs" />
     <Compile Include="Areas\Sistema\Models\Praga.cs" />
     <Compile Include="Areas\Sistema\Models\Semente.cs" />
@@ -165,6 +167,7 @@
     <Compile Include="Models\BancoContext.cs" />
     <Compile Include="Models\Repository.cs" />
     <Compile Include="Models\Usuario.cs" />
+    <Compile Include="Models\UsuarioViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -259,10 +262,14 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\Usuario\Login.cshtml" />
+    <Content Include="Views\Usuario\Registro.cshtml" />
+    <Content Include="Views\Usuario\VerificarConta.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Sistema\Views\Shared\" />
+    <Folder Include="Areas\Sistema\Views\Usuario\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
