Cadastro e login com banco, novos pacotes

--- a/OrganWeb/OrganWeb/bin/OrganWeb.dll.config
+++ b/OrganWeb/OrganWeb/bin/OrganWeb.dll.config
@@ -9,7 +9,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="BancoContext" connectionString="Server=localhost;Database=dbOrganWeb;Uid=root;Password=h928B!hijdUS;" providerName="MySql.Data.MySqlClient" />
+    <add name="BancoContext" connectionString="Server=localhost;Database=dbOrgan;Uid=root;Password=h928B!hijdUS;" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <!--<connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-OrganWeb-20190805034437.mdf;Initial Catalog=aspnet-OrganWeb-20190805034437;Integrated Security=True"
