--- a/OrganWeb/OrganWeb/OrganWeb.csproj
+++ b/OrganWeb/OrganWeb/OrganWeb.csproj
@@ -178,7 +178,7 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
-    <Compile Include="Areas\Sistema\Controllers\FazendaController.cs" />
+    <Compile Include="Areas\Sistema\Controllers\FuncionarioController.cs" />
     <Compile Include="Areas\Sistema\Controllers\SementeController.cs" />
     <Compile Include="Areas\Sistema\Models\Cargo.cs" />
     <Compile Include="Areas\Sistema\Models\Categoria.cs" />
@@ -192,22 +192,22 @@
     <Compile Include="Areas\Sistema\Models\Especificacao.cs" />
     <Compile Include="Areas\Sistema\Models\Estadio.cs" />
     <Compile Include="Areas\Sistema\Models\Estoque.cs" />
-    <Compile Include="Areas\Sistema\Models\Eventos.cs" />
+    <Compile Include="Areas\Sistema\Models\Evento.cs" />
     <Compile Include="Areas\Sistema\Models\Fazenda.cs" />
     <Compile Include="Areas\Sistema\Models\Fornecedor.cs" />
     <Compile Include="Areas\Sistema\Models\Funcionario.cs" />
     <Compile Include="Areas\Sistema\Models\HistoricoEstoque.cs" />
     <Compile Include="Areas\Sistema\Models\Item.cs" />
-    <Compile Include="Areas\Sistema\Models\Localizacao.cs" />
+    <Compile Include="Models\Localizacao.cs" />
     <Compile Include="Areas\Sistema\Models\Manutencao.cs" />
     <Compile Include="Areas\Sistema\Models\Monitoramento.cs" />
-    <Compile Include="Areas\Sistema\Models\Máquina.cs" />
+    <Compile Include="Areas\Sistema\Models\Maquina.cs" />
     <Compile Include="Areas\Sistema\Models\Plantio.cs" />
     <Compile Include="Areas\Sistema\Models\Praga.cs" />
     <Compile Include="Areas\Sistema\Models\Semente.cs" />
     <Compile Include="Areas\Sistema\Models\Solo.cs" />
     <Compile Include="Areas\Sistema\Models\Tarefa.cs" />
-    <Compile Include="Areas\Sistema\Models\Área.cs" />
+    <Compile Include="Areas\Sistema\Models\Area.cs" />
     <Compile Include="Areas\Sistema\SistemaAreaRegistration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -272,11 +272,11 @@
     <Content Include="fonts\fontawesome-webfont.woff" />
     <Content Include="fonts\fontawesome-webfont.ttf" />
     <Content Include="fonts\fontawesome-webfont.eot" />
-    <Content Include="Areas\Sistema\Views\Fazenda\Create.cshtml" />
-    <Content Include="Areas\Sistema\Views\Fazenda\Delete.cshtml" />
-    <Content Include="Areas\Sistema\Views\Fazenda\Details.cshtml" />
-    <Content Include="Areas\Sistema\Views\Fazenda\Edit.cshtml" />
-    <Content Include="Areas\Sistema\Views\Fazenda\Index.cshtml" />
+    <Content Include="Areas\Sistema\Views\Funcionario\Delete.cshtml" />
+    <Content Include="Areas\Sistema\Views\Funcionario\Details.cshtml" />
+    <Content Include="Areas\Sistema\Views\Funcionario\Edit.cshtml" />
+    <Content Include="Areas\Sistema\Views\Funcionario\Index.cshtml" />
+    <Content Include="Areas\Sistema\Views\Funcionario\Create.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\fontawesome.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
