--- a/OrganWeb/OrganWeb/OrganWeb.csproj
+++ b/OrganWeb/OrganWeb/OrganWeb.csproj
@@ -179,14 +179,18 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Areas\Sistema\Controllers\ControleController.cs" />
-    <Compile Include="Areas\Sistema\Controllers\EstoqueController.cs" />
+    <Compile Include="Areas\Sistema\Controllers\DoencasController.cs" />
+    <Compile Include="Areas\Sistema\Controllers\EquipesController.cs" />
     <Compile Include="Areas\Sistema\Controllers\FazendaController.cs" />
     <Compile Include="Areas\Sistema\Controllers\FornecedorController.cs" />
     <Compile Include="Areas\Sistema\Controllers\FuncionarioController.cs" />
     <Compile Include="Areas\Sistema\Controllers\ItemController.cs" />
+    <Compile Include="Areas\Sistema\Controllers\ManutencaoController.cs" />
     <Compile Include="Areas\Sistema\Controllers\MaquinaController.cs" />
+    <Compile Include="Areas\Sistema\Controllers\MonitoramentoesController.cs" />
     <Compile Include="Areas\Sistema\Controllers\PragaController.cs" />
-    <Compile Include="Areas\Sistema\Controllers\SementeController.cs" />
+    <Compile Include="Areas\Sistema\Controllers\TarefaController.cs" />
+    <Compile Include="Areas\Sistema\Controllers\VwItemsController.cs" />
     <Compile Include="Areas\Sistema\Models\Cargo.cs" />
     <Compile Include="Areas\Sistema\Models\Categoria.cs" />
     <Compile Include="Areas\Sistema\Models\Colheita.cs" />
@@ -198,12 +202,12 @@
     <Compile Include="Areas\Sistema\Models\Especificacao.cs" />
     <Compile Include="Areas\Sistema\Models\Estadio.cs" />
     <Compile Include="Areas\Sistema\Models\Estoque.cs" />
-    <Compile Include="Areas\Sistema\Models\Evento.cs" />
     <Compile Include="Areas\Sistema\Models\Fazenda.cs" />
     <Compile Include="Areas\Sistema\Models\Fornecedor.cs" />
     <Compile Include="Areas\Sistema\Models\Funcionario.cs" />
     <Compile Include="Areas\Sistema\Models\HistoricoEstoque.cs" />
     <Compile Include="Areas\Sistema\Models\Item.cs" />
+    <Compile Include="Areas\Sistema\Models\VwItems.cs" />
     <Compile Include="Models\Localizacao.cs" />
     <Compile Include="Areas\Sistema\Models\Manutencao.cs" />
     <Compile Include="Areas\Sistema\Models\Monitoramento.cs" />
@@ -278,11 +282,6 @@
     <Content Include="Areas\Sistema\Views\Funcionario\Details.cshtml" />
     <Content Include="Areas\Sistema\Views\Funcionario\Edit.cshtml" />
     <Content Include="Areas\Sistema\Views\Funcionario\Index.cshtml" />
-    <Content Include="Areas\Sistema\Views\Semente\Create.cshtml" />
-    <Content Include="Areas\Sistema\Views\Semente\Delete.cshtml" />
-    <Content Include="Areas\Sistema\Views\Semente\Details.cshtml" />
-    <Content Include="Areas\Sistema\Views\Semente\Edit.cshtml" />
-    <Content Include="Areas\Sistema\Views\Semente\Index.cshtml" />
     <Content Include="Areas\Sistema\Views\Item\Create.cshtml" />
     <Content Include="Areas\Sistema\Views\Item\Delete.cshtml" />
     <Content Include="Areas\Sistema\Views\Item\Details.cshtml" />
@@ -293,11 +292,6 @@
     <Content Include="Areas\Sistema\Views\Fornecedor\Details.cshtml" />
     <Content Include="Areas\Sistema\Views\Fornecedor\Edit.cshtml" />
     <Content Include="Areas\Sistema\Views\Fornecedor\Index.cshtml" />
-    <Content Include="Areas\Sistema\Views\Estoque\Create.cshtml" />
-    <Content Include="Areas\Sistema\Views\Estoque\Delete.cshtml" />
-    <Content Include="Areas\Sistema\Views\Estoque\Details.cshtml" />
-    <Content Include="Areas\Sistema\Views\Estoque\Edit.cshtml" />
-    <Content Include="Areas\Sistema\Views\Estoque\Index.cshtml" />
     <Content Include="Areas\Sistema\Views\Fazenda\Create.cshtml" />
     <Content Include="Areas\Sistema\Views\Fazenda\Delete.cshtml" />
     <Content Include="Areas\Sistema\Views\Fazenda\Details.cshtml" />
@@ -318,6 +312,36 @@
     <Content Include="Areas\Sistema\Views\Controle\Details.cshtml" />
     <Content Include="Areas\Sistema\Views\Controle\Edit.cshtml" />
     <Content Include="Areas\Sistema\Views\Controle\Index.cshtml" />
+    <Content Include="Areas\Sistema\Views\VwItems\Create.cshtml" />
+    <Content Include="Areas\Sistema\Views\VwItems\Delete.cshtml" />
+    <Content Include="Areas\Sistema\Views\VwItems\Details.cshtml" />
+    <Content Include="Areas\Sistema\Views\VwItems\Edit.cshtml" />
+    <Content Include="Areas\Sistema\Views\VwItems\Index.cshtml" />
+    <Content Include="Areas\Sistema\Views\Doencas\Create.cshtml" />
+    <Content Include="Areas\Sistema\Views\Doencas\Delete.cshtml" />
+    <Content Include="Areas\Sistema\Views\Doencas\Details.cshtml" />
+    <Content Include="Areas\Sistema\Views\Doencas\Edit.cshtml" />
+    <Content Include="Areas\Sistema\Views\Doencas\Index.cshtml" />
+    <Content Include="Areas\Sistema\Views\Monitoramentoes\Create.cshtml" />
+    <Content Include="Areas\Sistema\Views\Monitoramentoes\Delete.cshtml" />
+    <Content Include="Areas\Sistema\Views\Monitoramentoes\Details.cshtml" />
+    <Content Include="Areas\Sistema\Views\Monitoramentoes\Edit.cshtml" />
+    <Content Include="Areas\Sistema\Views\Monitoramentoes\Index.cshtml" />
+    <Content Include="Areas\Sistema\Views\Equipes\Create.cshtml" />
+    <Content Include="Areas\Sistema\Views\Equipes\Delete.cshtml" />
+    <Content Include="Areas\Sistema\Views\Equipes\Details.cshtml" />
+    <Content Include="Areas\Sistema\Views\Equipes\Edit.cshtml" />
+    <Content Include="Areas\Sistema\Views\Equipes\Index.cshtml" />
+    <Content Include="Areas\Sistema\Views\Manutencaos\Create.cshtml" />
+    <Content Include="Areas\Sistema\Views\Manutencaos\Delete.cshtml" />
+    <Content Include="Areas\Sistema\Views\Manutencaos\Details.cshtml" />
+    <Content Include="Areas\Sistema\Views\Manutencaos\Edit.cshtml" />
+    <Content Include="Areas\Sistema\Views\Manutencaos\Index.cshtml" />
+    <Content Include="Areas\Sistema\Views\Tarefa\Create.cshtml" />
+    <Content Include="Areas\Sistema\Views\Tarefa\Delete.cshtml" />
+    <Content Include="Areas\Sistema\Views\Tarefa\Details.cshtml" />
+    <Content Include="Areas\Sistema\Views\Tarefa\Edit.cshtml" />
+    <Content Include="Areas\Sistema\Views\Tarefa\Index.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\fontawesome.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
